# meson_issue

./: .gitignore  README.md  build-common-prefix.sh  build.sh
project_a/: lib_a.c  lib_a.h  meson.build
project_b/: lib_b.c  lib_b.h  meson.build
project_c/: lib_c.c  lib_c.h  main.c  meson.build
